名前付けを調整

--- a/.github/release-drafter-base.yml
+++ b/.github/release-drafter-base.yml
@@ -1,5 +1,4 @@
-name-template: $RESOLVED_VERSION
-tag-template: $RESOLVED_VERSION
+version-template: '$MAJOR.$MINOR'
 version-resolver:
   major:
     labels:
