--- a/.github/release-drafter-package-b.yml
+++ b/.github/release-drafter-package-b.yml
@@ -1,5 +1,6 @@
 _extends: release-flow-sample:.github/release-drafter-base.yml
-version-template: 'package-b-v$MAJOR.$MINOR'
+name-template: package-b-v$RESOLVED_VERSION
+tag-template: package-b-v$RESOLVED_VERSION
 tag-prefix: package-b-
 include-paths:
   - "packages/package-b/"
