--- a/.github/workflows/prodution-deploy.yml
+++ b/.github/workflows/prodution-deploy.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
-      - name: Deploy to staging
+      - name: Deploy to production
         run: git status 
